UCLALIB-98: Fix font size in jquery UI tabs, visible on homepage.

--- a/www/sites/all/themes/uclalib_omega/css/uclalib-omega.styles.css
+++ b/www/sites/all/themes/uclalib_omega/css/uclalib-omega.styles.css
@@ -407,6 +407,7 @@ a[href="#main-content"] {
   margin: 0 1px 0 0;
   padding: 0;
   font-weight: 100;
+  font-size: 19px;
 }
 .ui-tabs .ui-tabs-nav li a {
   color: white;
