--- a/www/sites/all/themes/uclalib_omega/sass/components/_jquery-ui-tabs.scss
+++ b/www/sites/all/themes/uclalib_omega/sass/components/_jquery-ui-tabs.scss
@@ -36,6 +36,7 @@
       margin: 0 1px 0 0;
       padding: 0;
       font-weight: 100;
+      font-size: 19px;
       a {
         color: white;
       }
